--- a/projects/ngx-i24-progress-bar/package.json
+++ b/projects/ngx-i24-progress-bar/package.json
@@ -1,11 +1,33 @@
 {
   "name": "ngx-i24-progress-bar",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "description": "A lightweight plugin to render a simple, animated progress bar.",
+  "author": {
+    "name": "YASEEN ALREFAEE",
+    "url": "https://icode24.com/",
+    "email": "yaseen@icode24.com"
+  },
+  "homepage": "https://github.com/yasref/ngx-i24-progress-bar-lib/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yasref/ngx-i24-progress-bar-lib/"
+  },
   "peerDependencies": {
     "@angular/common": "^14.0.0",
     "@angular/core": "^14.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
-  }
+  },
+  "license": "MIT",
+  "keywords": [
+    "color",
+    "progress",
+    "progress bar",
+    "angular",
+    "ng",
+    "ngx",
+    "i24",
+    "icode24"
+  ]
 }
